# Templr

./: .dockerignore  .env.example  .gitignore  Dockerfile  QUICK_START_GUIDE.md  README.md  VARIABLE_MAPPING.md  alembic.ini  docker-compose.yml  hello.py  init_db.py  pyproject.toml  sample_template.html  start.sh  test_datetime_template.py
.github/workflows/: docker-build.yml
app/: __init__.py  __main__.py  config.py  database.py  logging_config.py  main.py  utils.py
app/auth/: config.py  manager.py
app/data_upload/: __init__.py  models.py  routes.py  schemas.py  service.py
app/db/migrations/: env.py
app/db/migrations/versions/: 2025-06-03-22-03_496c0fac7e08.py  2025-06-03-22-05_b255f508b615.py
app/public/: routes.py
app/static/css/: style.css
app/templates/: models.py  routes.py  schemas.py  service.py
app/templates/html/: base.html  dashboard.html  profile.html
app/templates/html/auth/: login.html
app/templates/html/data_upload/: upload.html
app/templates/html/errors/: 404.html
app/templates/html/templates/: create.html  edit.html  list.html
app/users/: models.py  routes.py  schemas.py
app/web/: __init__.py  routes.py
tests/: README.md  check_database.py  create_test_with_failures.py  migrate_aliases.py  migrate_failed_file_path.py  run_tests.py  test_comprehensive.py  test_data_processing.py  test_error_handling.py  test_failed_rows.py  test_json_serialization.py  test_nan_handling.py  test_variable_mapping.py
tests/data/: test_data.csv  test_data_aliases.csv  test_data_mixed_case.csv  test_data_with_nan.csv  test_with_failures.csv
(+1 files in other folders)
