[project]
name = "templr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "alembic>=1.16.1",
    "asyncpg[sa]>=0.30.0",
    "fastapi>=0.115.12",
    "fastapi-users>=14.0.1",
    "fastapi-users-db-sqlalchemy>=7.0.0",
    "jinja2>=3.1.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-multipart>=0.0.6",
    "sqlalchemy[asyncio]>=2.0.41",
    "ujson>=5.10.0",
    "uvicorn>=0.34.3",
    "yarl>=1.20.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
